# cw_3_stroganova

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_data.json  test_functions.py
utils/: functions.py  main.py
